--- a/package.json
+++ b/package.json
@@ -16,6 +16,20 @@
   },
   "devDependencies": {
     "eslint": "^8.14.0",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "simple-git-hooks": "^2.7.0"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
+  },
+  "lint-staged": {
+    "*": [
+      "prettier --ignore-unknown --write",
+      "eslint --fix"
+    ]
   }
 }
